--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
+        </p>
+    </div>
 </body>
 </html>
