--- a/index.html
+++ b/index.html
@@ -12,5 +12,28 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
         </p>
     </div>
+    <div>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
+        </p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
+        </p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
+        </p>
+    </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ol type="i">
+            <li>git add .</li>
+            <li>git commit -m"  "</li>
+            <li>git push -u</li>
+        </ol>
+    </div>
 </body>
 </html>
