--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h3>My first website</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
-        </p>
-    </div>
-    <div>
+    <div class="blog">
         <h3>My first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
         </p>
     </div>
-    <div>
+    <div class="blog">
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
+        </p>
+    </div>
+    <div class="blog" class="side">
         <h3>My Second Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
         </p>
     </div>
-    <div>
+    <div class="blog">
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et asperiores ad quo labore iusto non reiciendis recusandae, fugiat illum enim excepturi voluptatem tenetur eum quod ducimus aut inventore dolorem vitae!
         </p>
     </div>
-    <div>
+    <div class="blog">
         <h3>How to push incremental code</h3>
         <ol type="i">
             <li>git add .</li>
